--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,7 @@
     }
    ],
    "source": [
-    "\"Unassigned data\""
+    "\"Unassigned data\"\n"
    ]
   },
   {
@@ -285,10 +285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "None"
@@ -296,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +303,7 @@
        "NoneType"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
